[project]
name = "dbmasta"
version = "0.1.28"
description = "A simple MariaDB/Postgres client based on SQLAlchemy core"
readme = "README.md"
authors = [{ name = "Matt Owen", email = "matt@dealerclear.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.41",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
mysql = ["pymysql"]
mysql-async = ["aiomysql", "asyncmy"]
pg = ["psycopg-binary"]
pg-async = ["asyncpg"]
all = ["pymysql", "aiomysql", "asyncmy", "asyncpg", "psycopg-binary"]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "python-dotenv>=1.0",
    "pymysql",
    "aiomysql",
    "asyncmy",
    "asyncpg",
    "psycopg-binary",
]

[project.urls]
Homepage = "https://github.com/mastamatto/dbmasta"
Repository = "https://github.com/mastamatto/dbmasta"
Issues = "https://github.com/mastamatto/dbmasta/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
